# srtemplate

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  gh-pages.yml
benches/: parser.rs
crates/srtemplate/: Cargo.toml
crates/srtemplate/examples/: custom_func.rs  handle_errors.rs  parse_args.rs  render_struct.rs  variables.rs
crates/srtemplate/src/: builtin.rs  helper.rs  lib.rs  parser.rs  render.rs  template.rs
crates/srtemplate/src/builtin/: math.rs  number.rs  os.rs  text.rs
crates/srtemplate/src/parser/: test.rs
crates/srtemplate/src/template/: function.rs  validations.rs
crates/srtemplate_macros/: Cargo.toml
crates/srtemplate_macros/examples/: simple.rs
crates/srtemplate_macros/src/: attr.rs  function.rs  lib.rs
examples/: custom_delimiter.rs  custom_func.rs  handle_errors.rs  macros.rs  parse_args.rs  render_struct.rs  variables.rs
examples/real_world/: Cargo.toml  Trunk.toml  default.nix  flake.nix  index.html  main.scss  tailwind.config.js
examples/real_world/src/: main.rs
helper_macros/: Cargo.toml
helper_macros/src/: function.rs  lib.rs  variable.rs
src/: builtin.rs  error.rs  helper.rs  lib.rs  parser.rs  render.rs  template.rs
src/builtin/: math.rs  number.rs  os.rs  text.rs
src/helper/: arg.rs  serialize.rs
src/parser/: error.rs  function.rs  functions.rs  lexer.rs  literals.rs  test.rs  values.rs
src/template/: function.rs  validations.rs
