[package]
name = "srtemplate_helper_macros"
version = "0.1.0"
edition = "2021"
description = "Macros for SrTemplate"
categories = ["template-engine", "text-processing"]
keywords = ["runtime", "string", "template"]
authors = ["Sergio Ribera"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioRibera/srtemplate"
homepage = "https://github.com/SergioRibera/srtemplate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
venial = "0.6"
