[package]
name = "srtemplate"
description = "Template String made with nom parser"
authors = ["Sergio Ribera"]
version = "0.1.0"
edition = "2021"

[features]
default = ["text", "os", "number", "typed_args"]
debug = ["log"]
text = []
os = []
number = []
typed_args = []

[dependencies]
nom = "7.1.3"
anyhow = "1.0.75"
thiserror = "1.0.49"
concat-idents = "1.1.5"
log = { version = "0.4.20", optional = true }
dashmap = "5.5.3"

[[example]]
name = "parse_args"
required-features = ["typed_args"]
path = "./examples/parse_args.rs"
