[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
leptos = { version = "0.5.1", features = ["csr"] }
srtemplate = { path = "../../" }
